* wrong compat and pipes cpp files were being included  * setNonBlocking does nothing, but is implemented  * switched to Python 2.6

--- a/software/usb_ir/win32/IguanaIR Package.vcproj
+++ b/software/usb_ir/win32/IguanaIR Package.vcproj
@@ -25,7 +25,7 @@
 			>
 			<Tool
 				Name="VCNMakeTool"
-				BuildCommandLine="c:\python25\python setup.py $(OutDir)"
+				BuildCommandLine="c:\python26\python setup.py &quot;$(OutDir)&quot;"
 				ReBuildCommandLine=""
 				CleanCommandLine="del iguanaIR.iss"
 				Output=""
@@ -46,7 +46,7 @@
 			>
 			<Tool
 				Name="VCNMakeTool"
-				BuildCommandLine="c:\python25\python setup.py $(OutDir)"
+				BuildCommandLine="c:\python26\python setup.py &quot;$(OutDir)&quot;"
 				ReBuildCommandLine=""
 				CleanCommandLine="del iguanaIR.iss"
 				Output="IguanaIR Packaging.exe"
