--- a/software/usb_ir/win32/igclient.vcproj
+++ b/software/usb_ir/win32/igclient.vcproj
@@ -188,7 +188,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\compat.c"
+				RelativePath=".\compat.c"
 				>
 			</File>
 			<File
@@ -196,7 +196,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\pipes.c"
+				RelativePath=".\pipes.c"
 				>
 			</File>
 			<File
