--- a/software/usb_ir/reflasher/Makefile
+++ b/software/usb_ir/reflasher/Makefile
@@ -11,11 +11,11 @@ dev devel:
 
 install:
 	install -d $(DESTDIR)$(prefix)/lib/$(NAME)/hex
-	install upgrade-usb $(DESTDIR)$(prefix)/lib/$(NAME)
+	install $(NAME) $(DESTDIR)$(prefix)/lib/$(NAME)
 	install $(filter-out hex/loader-0.hex hex/body-0.hex, $(wildcard hex/*.hex)) $(DESTDIR)$(prefix)/lib/$(NAME)/hex
 	install -d $(DESTDIR)$(prefix)/bin
 	rm -f $(DESTDIR)$(prefix)/bin/$(NAME)
-	ln -s ../lib/$(NAME)/upgrade-usb $(DESTDIR)$(prefix)/bin/$(NAME)
+	ln -s ../lib/$(NAME)/$(NAME) $(DESTDIR)$(prefix)/bin/$(NAME)
 
 uninstall:
 	rm -f $(DESTDIR)$(prefix)/bin/$(NAME)
