missed the install line

--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -110,7 +110,7 @@ ifeq ($(DARWIN),)
 	install -D $(srcdir)/iguanaIR.init $(DESTDIR)/etc/init.d/iguanaIR
 	install -D --mode 644 $(srcdir)/iguanaIR.options $(DESTDIR)/etc/default/iguanaIR
 	install -D --mode 644 $(srcdir)/plug-trigger/udev/iguanaIR.rules \
-	                      $(DESTDIR)/etc/udev/rules.d/iguanaIR.rules
+	                      $(DESTDIR)/lib/udev/rules.d/iguanaIR.rules
 	install --mode 755 $(SETOWNER) -d $(DESTDIR)/lib/udev/devices/iguanaIR
 	install --mode 755 $(SETOWNER) -d $(DESTDIR)/dev/iguanaIR
 endif
