Windows is basically working w the new driver structure

--- a/software/usb_ir/win32/igclient.vcproj
+++ b/software/usb_ir/win32/igclient.vcproj
@@ -43,7 +43,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..;popt"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;SUPPORT_INCLUDE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -122,7 +122,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..;popt"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;SUPPORT_INCLUDE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
@@ -188,7 +188,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\compat.c"
+				RelativePath=".\compat-windows.c"
 				>
 			</File>
 			<File
