* Fixed some build include paths in Windows  * tempfile.NamedTemporaryFile cannot be opened a second time in windows, so work around that.

--- a/software/usb_ir/win32/igdaemon.vcproj
+++ b/software/usb_ir/win32/igdaemon.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..;libusb-win32;popt"
+				AdditionalIncludeDirectories="..;popt"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;LIBUSB_NO_THREADS;SUPPORT_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -121,7 +121,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..;libusb-win32;popt"
+				AdditionalIncludeDirectories="..;popt"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;LIBUSB_NO_THREADS;SUPPORT_EXPORTS"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
