Mostly patches for osx, but also a couple minor rephrasings.

--- a/software/usb_ir/Make.settings.in
+++ b/software/usb_ir/Make.settings.in
@@ -39,6 +39,6 @@ else
     #SHAREEXT = dylib
     LIBNAME=libiguanaIR.dylib
     SHAREARG = -dynamiclib
-    OSSUPPORT = daemonosx.o
+    OSSUPPORT = osx/daemonosx.o
   endif
 endif
