--- a/software/usb_ir/packaging/debian/control
+++ b/software/usb_ir/packaging/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.7.2.2
 Package: iguanair
 Architecture: any
 Section: utils
-Depends: libc6 (>=2.0), udev (>= 0.99), libusb-0.1-4 (>= 0.1.11), libpopt0 (>=1.10)
+Depends: libc6 (>=2.0), udev (>= 0.99), libpopt0 (>=1.10), libusb-1.0-0 | libusb-0.1-4 (>= 0.1.11)
 Essential: no
 Recommends: lirc
 Description: This is the IguanaWorks USB IR daemon/driver and
