--- a/software/usb_ir/reflasher/Makefile
+++ b/software/usb_ir/reflasher/Makefile
@@ -1,5 +1,4 @@
 NAME=iguanaIR-reflasher
-prefix=/usr
 
 all:
 
@@ -10,17 +9,17 @@ dev devel:
 	ln -s ../../../../firmware/usb_ir.loader/output/usb_ir.hex hex/loader-0.hex
 
 install:
-	install -d $(DESTDIR)$(prefix)/lib/$(NAME)/hex
-	install $(NAME) $(DESTDIR)$(prefix)/lib/$(NAME)
-	install $(filter-out hex/loader-0.hex hex/body-0.hex, $(wildcard hex/*.hex)) $(DESTDIR)$(prefix)/lib/$(NAME)/hex
-	install -d $(DESTDIR)$(prefix)/bin
-	rm -f $(DESTDIR)$(prefix)/bin/$(NAME)
-	ln -s ../lib/$(NAME)/$(NAME) $(DESTDIR)$(prefix)/bin/$(NAME)
+	install -d $(DESTDIR)$(LIBDIR)/$(NAME)/hex
+	install $(NAME) $(DESTDIR)$(LIBDIR)/$(NAME)
+	install $(filter-out hex/loader-0.hex hex/body-0.hex, $(wildcard hex/*.hex)) $(DESTDIR)$(LIBDIR)/$(NAME)/hex
+	install -d $(DESTDIR)$(BINDIR)
+	rm -f $(DESTDIR)$(BINDIR)/$(NAME)
+	ln -s ../lib/$(NAME)/$(NAME) $(DESTDIR)$(BINDIR)/$(NAME)
 
 uninstall:
-	rm -f $(DESTDIR)$(prefix)/bin/$(NAME)
-	rm -f $(DESTDIR)$(prefix)/lib/$(NAME)/hex/*.hex
-	rmdir $(DESTDIR)$(prefix)/lib/$(NAME)/hex 2>/dev/null || true
-	rm -f $(DESTDIR)$(prefix)/lib/$(NAME)/upgrade-usb
+	rm -f $(DESTDIR)$(BINDIR)/$(NAME)
+	rm -f $(DESTDIR)$(LIBDIR)/$(NAME)/hex/*.hex
+	rmdir $(DESTDIR)$(LIBDIR)/$(NAME)/hex 2>/dev/null || true
+	rm -f $(DESTDIR)$(LIBDIR)/$(NAME)/upgrade-usb
 
 .PHONY: all rpm dev devel tarball install
