--- a/firmware/usb_ir_body/usb_ir_body/body.inc.in
+++ b/firmware/usb_ir_body/usb_ir_body/body.inc.in
@@ -24,7 +24,7 @@ RX_PIN_CR:    EQU P05CR  ; control reg for rx pin
 
 TX_BANK:      EQU P1DATA ; which set are the transmit pins in?
 OLD_TX_BANK:  EQU P0DATA ; pins used to be in this set
-TX_MASK:      EQU 0xF0   ; all pins that can tx
+TX_MASK:      EQU 0xFC   ; all pins that can tx
 OLD_TX_MASK:  EQU 0x40   ; mask for unenclosed devices
 
 PIN_CFG_MASK: EQU 0x07   ; we only configure these pin control bits
