fix a linking error under ubuntu by correctly ordering the libraries AFTER the object files.

--- a/software/usb_ir/drivers/Makefile.in
+++ b/software/usb_ir/drivers/Makefile.in
@@ -10,12 +10,12 @@ endif
 all: $(DRIVERS)
 
 libusb.so: libusb.c $(LISTS) Makefile
-	$(CC) $(CPPFLAGS) $(CFLAGS) $(SHAREARG) $(LDFLAGS) -lusb-1.0 $< \
-		$(LISTS) -o $@
+	$(CC) $(CPPFLAGS) $(CFLAGS) $(SHAREARG) $(LDFLAGS) $< \
+		$(LISTS) -o $@ -lusb-1.0
 
 libusbpre1.so: libusbpre1.c $(LISTS) Makefile
-	$(CC) $(CPPFLAGS) $(CFLAGS) $(SHAREARG) $(LDFLAGS) -lusb $< \
-		$(LISTS) -o $@
+	$(CC) $(CPPFLAGS) $(CFLAGS) $(SHAREARG) $(LDFLAGS) $< \
+		$(LISTS) -o $@ -lusb
 
 .PHONY: clean
 clean:
